*Empty MediaWiki Message*

--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -1,231 +1,231 @@
 {{#switch:{{{1|}}}
-|ADO = [[United States Virgin Islands]]
-|AFG = [[Afghanistan]]
-|ALB = [[Albania]]
-|ALŽ = [[Algeria]]
-|AMS = [[United States Virgin Islands]]
-|AND = [[Andorra]]
-|ANG = [[Angola]]
-|ANV = [[Anguilla]]
-|ARG = [[Argentina]]
-|ARM = [[Armenia]]
-|ARU = [[Aruba]]
-|ATG = [[Antigua and Barbuda]]
-|AUS = [[Australia]]
-|AUT = [[Austria]]
-|AZE = [[Azerbaijan]]
-|BAH = [[Bahamas]]
-|BAN = [[Bangladesh]]
-|BAR = [[Barbados]]
-|BEL = [[Belgium]]
-|BEN = [[Benin]]
-|BER = [[Bermuda]]
-|BIH = [[Bosnia and Herzegovina]]
-|BHR = [[Bahrain]]
-|BJE = [[Belarus]]
-|BLZ = [[Belize]]
-|BOC = [[Botswana]]
-|BOL = [[Bolivia]]
-|BRA = [[Brazil]]
-|BRIT DJEV = [[British Virgin Islands]]
-|BRU = [[Brunei]]
-|BUF = [[Burkina Faso]]
-|BUG = [[Bulgaria]]
-|BUR = [[Burundi]]
-|BUT = [[Bhutan]]
-|CG = [[Montenegro]]
-|CIP = [[Cyprus]]
-|CIV = [[Cote d'Ivoire]]
-|ČAD = [[Chad]]
-|ČEŠ = [[Czech Republic]]
-|ČIL = [[Chile]]
-|ČSSR = [[Czech Republic]]
-|DAN = [[Denmark]]
-|DDR = [[East Germany]]
-|DMN = [[Dominica]]
-|DOM = [[Dominican Republic]]
-|DR KONGO = [[Democratic Republic of the Congo]]
-|DRK = [[Democratic Republic of the Congo]]
-|DŽI = [[Djibouti]]
-|EGI = [[Egypt]]
-|EKG = [[Equatorial Guinea]]
-|EKV = [[Ecuador]]
-|ENG = [[England]]
-|ERI = [[Eritrea]]
-|EST = [[Estonia]]
-|ETI = [[Ethiopia]]
-|FAR = [[Faroe Islands]]
-|FIĐ = [[Fiji]]
-|FIL = [[Philippines]]
-|FIN = [[Finland]]
-|FRA = [[France]]
-|FR GIJ = [[France]]
-|GAB = [[Gabon]]
-|GAM = [[The Gambia]]
-|GAN = [[Ghana]]
-|GIB = [[Gibraltar]]
-|GRE = [[Grenada]]
-|GRU = [[Georgia]]
-|GRČ = [[Greece]]
-|GUAM = [[Guam]]
-|GUA = [[Guatemala]]
-|GVA = [[Guyana]]
-|GVAD = [[Guadeloupe]]
-|GVB = [[Guinea-Bissau]]
-|GVI = [[Guinea]]
-|HAI = [[Haiti]]
-|HK = [[Hong Kong]]
-|HON = [[Honduras]]
-|HRV = [[Croatia]]
-|IND = [[India]]
-|INDN = [[Indonesia]]
-|IRK = [[Iraq]]
-|IRN = [[Iran]]
-|IRS = [[Ireland]]
-|ISL = [[Iceland]]
-|IST T = [[East Timor]]
-|ITA = [[Italy]]
-|IZR = [[Israel]]
-|JAM = [[Jamaica]]
-|JEM = [[Yemen]]
-|JAP = [[Japan]]
-|JAR = [[South Africa]]
-|JKO = [[South Korea]]
-|JOR = [[Jordan]]
-|JUG = [[SFR Yugoslavia]]
-|JUGK = [[Kingdom of Yugoslavia]]
-|KAJ = [[Cayman Islands]]
-|KAM = [[Cameroon]]
-|KAN = [[Canada]]
-|KAT = [[Qatar]]
-|KATL = [[Catalonia]]
-|KAZ = [[Kazakhstan]]
-|KEN = [[Kenya]]
-|KIN = [[People's Republic of China]]
-|KIR = [[Kyrgyzstan]]
-|KMB = [[Cambodia]]
-|KOL = [[Colombia]]
-|KOM = [[Comoros]]
-|KOS = [[Costa Rica]]
-|KSV = [[Kosovo]]
-|KUB = [[Cuba]]
-|KUK = [[Cook Islands]]
-|KUV = [[Kuwait]]
-|LAO = [[Laos]]
-|LAT = [[Latvia]]
-|LBN = [[Lebanon]]
-|LBR = [[Liberia]]
-|LES = [[Lesotho]]
-|LIB = [[Libya]]
-|LIH = [[Liechtenstein]]
-|LIT = [[Lithuania]]
-|LUX = [[Luxembourg]]
-|MAD = [[Madagascar]]
-|MAK = [[Macedonia]]
-|MLT = [[Malta]]
-|MLV = [[Malawi]]
-|MAĐ = [[Hungary]]
-|MALD = [[Maldives]]
-|MALE = [[Malaysia]]
-|MALI = [[Mali]]
-|MARŠ = [[Marshall Islands]]
-|MART = [[Martinique]]  
-|MAR = [[Morocco]]
-|MAO = [[Macau]]
-|MAU = [[Mauritania]]
-|MAUS = [[Mauritius]]
-|MEX = [[Mexico]]
-|MIA = [[Myanmar]]
-|MNG = [[Mongolia]]
-|MOL = [[Moldova]]
-|MONT = [[Montserrat]]
-|MOZ = [[Mozambique]]
-|NAM = [[Namibia]]
-|NDH = [[Independent State of Croatia]]
-|NEP = [[Nepal]]
-|NGR = [[Niger]]
-|NIG = [[Nigeria]]
-|NIK = [[Nicaragua]]
-|NIZ = [[Netherlands]]
-|NIZ ANT = [[Netherlands Antilles]]
-|NJE = [[Germany]]
-|NOR = [[Norway]]
-|NZL = [[New Zealand]]
-|OMA = [[Oman]]
-|OTC = [[Turks and Caicos Islands]]
-|OVČ = [[Faroe Islands]]
-|PAK = [[Pakistan]]
-|PAL = [[Palestine]]
-|PAN = [[Panama]]
-|PAR = [[Paraguay]]
-|PER = [[Peru]]
-|PNG = [[Papua New Guinea]]
-|POLJ = [[Poland]]
-|POR = [[Portugal]]
-|PUE = [[Puerto Rico]]
-|RKO = [[Republic of the Congo]]
-|RUA = [[Rwanda]]
-|RUM = [[Romania]]
-|RUS = [[Russia]]
-|SAD = [[United States]]
-|SAL = [[El Salvador]]
-|SAM = [[Samoa]]
-|SAU = [[Saudi Arabia]]
-|SEJ = [[Seychelles]]
-|SEN = [[Senegal]]
-|S LEO = [[Sierra Leone]]
-|SIN = [[Singapore]]
-|SIR = [[Syria]]
-|SCG = [[Serbia and Montenegro]]
-|SJI = [[Northern Ireland]]
-|SJKOR = [[North Korea]]
-|SLK = [[Slovakia]]
-|SLO = [[Slovenia]]
-|SMR = [[San Marino]]
-|SOL = [[Solomon Islands]]
-|SOM = [[Somalia]]
-|SRB = [[Serbia]]
-|SRH = [[SR Croatia]]
-|SSSR = [[Soviet Union]]
-|SAR = [[Central African Republic]]
-|SVA = [[Swaziland]]
-|SV LUC = [[Saint Lucia]]
-|SV KIN = [[Saint Kitts and Nevis]]
-|SV TIP = [[Sao Tome and Principe]]
-|SV VIG = [[Saint Vincent and the Grenadines]]
-|SUD = [[Sudan]]
-|SUR = [[Suriname]]
-|ŠKO = [[Scotland]]
-|ŠPA = [[Spain]]
-|ŠVE = [[Sweden]]
-|ŠRI = [[Sri Lanka]]
-|ŠVI = [[Switzerland]]
-|TADŽ = [[Tajikistan]]
-|FR POLI = [[French Polynesia]]
-|TAH = [[French Polynesia]]
-|TAJ = [[Thailand]]
-|TAJV = [[Republic of China]]
-|TAN = [[Tanzania]]
-|TOG = [[Togo]]
-|TON = [[Tonga]]
-|TRI = [[Trinidad and Tobago]]
-|TUN = [[Tunisia]]
-|TKM = [[Turkmenistan]]
-|TUR = [[Turkey]]
-|TUV = [[Tuvalu]]
-|UAE = [[United Arab Emirates]]
-|UGA = [[Uganda]]
-|UKR = [[Ukraine]]
-|URU = [[Uruguay]]
-|UZB = [[Uzbekistan]]
-|VAN = [[Vanuatu]]
-|VEN = [[Venezuela]]
-|VIJ = [[Vietnam]]
-|WAL = [[Wales]]
-|WIF = [[Wallis and Futuna]]
-|ZAM = [[Zambia]]
-|ZEL = [[Cape Verde]]
-|ZIM = [[Zimbabwe]]
+|ADO|United States Virgin Islands = [[United States Virgin Islands]]
+|AFG|Afghanistan = [[Afghanistan]]
+|ALB|Albania = [[Albania]]
+|ALŽ|Algeria = [[Algeria]]
+|AMS|United States Virgin Islands = [[United States Virgin Islands]]
+|AND|Andorra = [[Andorra]]
+|ANG|Angola = [[Angola]]
+|ANV|Anguilla = [[Anguilla]]
+|ARG|Argentina = [[Argentina]]
+|ARM|Armenia = [[Armenia]]
+|ARU|Aruba = [[Aruba]]
+|ATG|Antigua and Barbuda = [[Antigua and Barbuda]]
+|AUS|Australia = [[Australia]]
+|AUT|Austria = [[Austria]]
+|AZE|Azerbaijan = [[Azerbaijan]]
+|BAH|Bahamas = [[Bahamas]]
+|BAN|Bangladesh = [[Bangladesh]]
+|BAR|Barbados = [[Barbados]]
+|BEL|Belgium = [[Belgium]]
+|BEN|Benin = [[Benin]]
+|BER|Bermuda = [[Bermuda]]
+|BIH|Bosnia and Herzegovina = [[Bosnia and Herzegovina]]
+|BHR|Bahrain = [[Bahrain]]
+|BJE|Belarus = [[Belarus]]
+|BLZ|Belize = [[Belize]]
+|BOC|Botswana = [[Botswana]]
+|BOL|Bolivia = [[Bolivia]]
+|BRA|Brazil = [[Brazil]]
+|BRIT DJEV|British Virgin Islands = [[British Virgin Islands]]
+|BRU|Brunei = [[Brunei]]
+|BUF|Burkina Faso = [[Burkina Faso]]
+|BUG|Bulgaria = [[Bulgaria]]
+|BUR|Burundi = [[Burundi]]
+|BUT|Bhutan = [[Bhutan]]
+|CG|Montenegro = [[Montenegro]]
+|CIP|Cyprus = [[Cyprus]]
+|CIV|Cote d'Ivoire = [[Cote d'Ivoire]]
+|ČAD|Chad = [[Chad]]
+|ČEŠ|Czech Republic = [[Czech Republic]]
+|ČIL|Chile = [[Chile]]
+|ČSSR|Czech Republic = [[Czech Republic]]
+|DAN|Denmark = [[Denmark]]
+|DDR|East Germany = [[East Germany]]
+|DMN|Dominica = [[Dominica]]
+|DOM|Dominican Republic = [[Dominican Republic]]
+|DR KONGO|Democratic Republic of the Congo = [[Democratic Republic of the Congo]]
+|DRK|Democratic Republic of the Congo = [[Democratic Republic of the Congo]]
+|DŽI|Djibouti = [[Djibouti]]
+|EGI|Egypt = [[Egypt]]
+|EKG|Equatorial Guinea = [[Equatorial Guinea]]
+|EKV|Ecuador = [[Ecuador]]
+|ENG|England = [[England]]
+|ERI|Eritrea = [[Eritrea]]
+|EST|Estonia = [[Estonia]]
+|ETI|Ethiopia = [[Ethiopia]]
+|FAR|Faroe Islands = [[Faroe Islands]]
+|FIĐ|Fiji = [[Fiji]]
+|FIL|Philippines = [[Philippines]]
+|FIN|Finland = [[Finland]]
+|FRA|France = [[France]]
+|FR GIJ|France = [[France]]
+|GAB|Gabon = [[Gabon]]
+|GAM|The Gambia = [[The Gambia]]
+|GAN|Ghana = [[Ghana]]
+|GIB|Gibraltar = [[Gibraltar]]
+|GRE|Grenada = [[Grenada]]
+|GRU|Georgia = [[Georgia]]
+|GRČ|Greece = [[Greece]]
+|GUAM|Guam = [[Guam]]
+|GUA|Guatemala = [[Guatemala]]
+|GVA|Guyana = [[Guyana]]
+|GVAD|Guadeloupe = [[Guadeloupe]]
+|GVB|Guinea-Bissau = [[Guinea-Bissau]]
+|GVI|Guinea = [[Guinea]]
+|HAI|Haiti = [[Haiti]]
+|HK|Hong Kong = [[Hong Kong]]
+|HON|Honduras = [[Honduras]]
+|HRV|Croatia = [[Croatia]]
+|IND|India = [[India]]
+|INDN|Indonesia = [[Indonesia]]
+|IRK|Iraq = [[Iraq]]
+|IRN|Iran = [[Iran]]
+|IRS|Ireland = [[Ireland]]
+|ISL|Iceland = [[Iceland]]
+|IST T|East Timor = [[East Timor]]
+|ITA|Italy = [[Italy]]
+|IZR|Israel = [[Israel]]
+|JAM|Jamaica = [[Jamaica]]
+|JEM|Yemen = [[Yemen]]
+|JAP|Japan = [[Japan]]
+|JAR|South Africa = [[South Africa]]
+|JKO|South Korea = [[South Korea]]
+|JOR|Jordan = [[Jordan]]
+|JUG|SFR Yugoslavia = [[SFR Yugoslavia]]
+|JUGK|Kingdom of Yugoslavia = [[Kingdom of Yugoslavia]]
+|KAJ|Cayman Islands = [[Cayman Islands]]
+|KAM|Cameroon = [[Cameroon]]
+|KAN|Canada = [[Canada]]
+|KAT|Qatar = [[Qatar]]
+|KATL|Catalonia = [[Catalonia]]
+|KAZ|Kazakhstan = [[Kazakhstan]]
+|KEN|Kenya = [[Kenya]]
+|KIN|People's Republic of China = [[People's Republic of China]]
+|KIR|Kyrgyzstan = [[Kyrgyzstan]]
+|KMB|Cambodia = [[Cambodia]]
+|KOL|Colombia = [[Colombia]]
+|KOM|Comoros = [[Comoros]]
+|KOS|Costa Rica = [[Costa Rica]]
+|KSV|Kosovo = [[Kosovo]]
+|KUB|Cuba = [[Cuba]]
+|KUK|Cook Islands = [[Cook Islands]]
+|KUV|Kuwait = [[Kuwait]]
+|LAO|Laos = [[Laos]]
+|LAT|Latvia = [[Latvia]]
+|LBN|Lebanon = [[Lebanon]]
+|LBR|Liberia = [[Liberia]]
+|LES|Lesotho = [[Lesotho]]
+|LIB|Libya = [[Libya]]
+|LIH|Liechtenstein = [[Liechtenstein]]
+|LIT|Lithuania = [[Lithuania]]
+|LUX|Luxembourg = [[Luxembourg]]
+|MAD|Madagascar = [[Madagascar]]
+|MAK|Macedonia = [[Macedonia]]
+|MLT|Malta = [[Malta]]
+|MLV|Malawi = [[Malawi]]
+|MAĐ|Hungary = [[Hungary]]
+|MALD|Maldives = [[Maldives]]
+|MALE|Malaysia = [[Malaysia]]
+|MALI|Mali = [[Mali]]
+|MARŠ|Marshall Islands = [[Marshall Islands]]
+|MART|Martinique = [[Martinique]]  
+|MAR|Morocco = [[Morocco]]
+|MAO|Macau = [[Macau]]
+|MAU|Mauritania = [[Mauritania]]
+|MAUS|Mauritius = [[Mauritius]]
+|MEX|Mexico = [[Mexico]]
+|MIA|Myanmar = [[Myanmar]]
+|MNG|Mongolia = [[Mongolia]]
+|MOL|Moldova = [[Moldova]]
+|MONT|Montserrat = [[Montserrat]]
+|MOZ|Mozambique = [[Mozambique]]
+|NAM|Namibia = [[Namibia]]
+|NDH|Independent State of Croatia = [[Independent State of Croatia]]
+|NEP|Nepal = [[Nepal]]
+|NGR|Niger = [[Niger]]
+|NIG|Nigeria = [[Nigeria]]
+|NIK|Nicaragua = [[Nicaragua]]
+|NIZ|Netherlands = [[Netherlands]]
+|NIZ ANT|Netherlands Antilles = [[Netherlands Antilles]]
+|NJE|Germany = [[Germany]]
+|NOR|Norway = [[Norway]]
+|NZL|New Zealand = [[New Zealand]]
+|OMA|Oman = [[Oman]]
+|OTC|Turks and Caicos Islands = [[Turks and Caicos Islands]]
+|OVČ|Faroe Islands = [[Faroe Islands]]
+|PAK|Pakistan = [[Pakistan]]
+|PAL|Palestine = [[Palestine]]
+|PAN|Panama = [[Panama]]
+|PAR|Paraguay = [[Paraguay]]
+|PER|Peru = [[Peru]]
+|PNG|Papua New Guinea = [[Papua New Guinea]]
+|POLJ|Poland = [[Poland]]
+|POR|Portugal = [[Portugal]]
+|PUE|Puerto Rico = [[Puerto Rico]]
+|RKO|Republic of the Congo = [[Republic of the Congo]]
+|RUA|Rwanda = [[Rwanda]]
+|RUM|Romania = [[Romania]]
+|RUS|Russia = [[Russia]]
+|SAD|United States = [[United States]]
+|SAL|El Salvador = [[El Salvador]]
+|SAM|Samoa = [[Samoa]]
+|SAU|Saudi Arabia = [[Saudi Arabia]]
+|SEJ|Seychelles = [[Seychelles]]
+|SEN|Senegal = [[Senegal]]
+|S LEO|Sierra Leone = [[Sierra Leone]]
+|SIN|Singapore = [[Singapore]]
+|SIR|Syria = [[Syria]]
+|SCG|Serbia and Montenegro = [[Serbia and Montenegro]]
+|SJI|Northern Ireland = [[Northern Ireland]]
+|SJKOR|North Korea = [[North Korea]]
+|SLK|Slovakia = [[Slovakia]]
+|SLO|Slovenia = [[Slovenia]]
+|SMR|San Marino = [[San Marino]]
+|SOL|Solomon Islands = [[Solomon Islands]]
+|SOM|Somalia = [[Somalia]]
+|SRB|Serbia = [[Serbia]]
+|SRH|SR Croatia = [[SR Croatia]]
+|SSSR|Soviet Union = [[Soviet Union]]
+|SAR|Central African Republic = [[Central African Republic]]
+|SVA|Swaziland = [[Swaziland]]
+|SV LUC|Saint Lucia = [[Saint Lucia]]
+|SV KIN|Saint Kitts and Nevis = [[Saint Kitts and Nevis]]
+|SV TIP|Sao Tome and Principe = [[Sao Tome and Principe]]
+|SV VIG|Saint Vincent and the Grenadines = [[Saint Vincent and the Grenadines]]
+|SUD|Sudan = [[Sudan]]
+|SUR|Suriname = [[Suriname]]
+|ŠKO|Scotland = [[Scotland]]
+|ŠPA|Spain = [[Spain]]
+|ŠVE|Sweden = [[Sweden]]
+|ŠRI|Sri Lanka = [[Sri Lanka]]
+|ŠVI|Switzerland = [[Switzerland]]
+|TADŽ|Tajikistan = [[Tajikistan]]
+|FR POLI|French Polynesia = [[French Polynesia]]
+|TAH|French Polynesia = [[French Polynesia]]
+|TAJ|Thailand = [[Thailand]]
+|TAJV|Republic of China = [[Republic of China]]
+|TAN|Tanzania = [[Tanzania]]
+|TOG|Togo = [[Togo]]
+|TON|Tonga = [[Tonga]]
+|TRI|Trinidad and Tobago = [[Trinidad and Tobago]]
+|TUN|Tunisia = [[Tunisia]]
+|TKM|Turkmenistan = [[Turkmenistan]]
+|TUR|Turkey = [[Turkey]]
+|TUV|Tuvalu = [[Tuvalu]]
+|UAE|United Arab Emirates = [[United Arab Emirates]]
+|UGA|Uganda = [[Uganda]]
+|UKR|Ukraine = [[Ukraine]]
+|URU|Uruguay = [[Uruguay]]
+|UZB|Uzbekistan = [[Uzbekistan]]
+|VAN|Vanuatu = [[Vanuatu]]
+|VEN|Venezuela = [[Venezuela]]
+|VIJ|Vietnam = [[Vietnam]]
+|WAL|Wales = [[Wales]]
+|WIF|Wallis and Futuna = [[Wallis and Futuna]]
+|ZAM|Zambia = [[Zambia]]
+|ZEL|Cape Verde = [[Cape Verde]]
+|ZIM|Zimbabwe = [[Zimbabwe]]
 |#default = ???
 }}<noinclude>
 </noinclude>
