*Empty MediaWiki Message*

--- a/Template:Bandera.mw
+++ b/Template:Bandera.mw
@@ -1,3 +1,2 @@
-[[File:{{Flagcountry|{{{1|}}}}}|border|23px]] {{Country|{{{1|}}}}}
-<noinclude>
+[[File:{{Flagcountry|{{{1|}}}}}|border|23px]]<noinclude>
 </noinclude>
