--- a/Template:Bandera2.mw
+++ b/Template:Bandera2.mw
@@ -1,1 +1,3 @@
-{{country data {{{1|}}}|flagu/core|name={{{1|}}}|variant={{{variant|{{{2|}}}}}}|size={{{size|}}}}}<noinclude>{{documentation}}</noinclude>
+[[File:{{Flagcountry|{{{1|}}}}}|border|23px]] {{Country|{{{1|}}}}}
+<noinclude>
+</noinclude>
