--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -1,7 +1,7 @@
 {{#switch:{{{1|}}}
-|ABW|ARU|Aruba           = [[Aruba]]
+|ABW|ARU|Aruba              = [[Aruba]]
 |ADO|United States Virgin Islands = [[United States Virgin Islands]]
-|AFG|Afghanistan = [[Afghanistan]]
+|AFG|Afghanistan|Afganistan = [[Afganistan]]
 |ALB|Albania = [[Albania]]
 |ALŽ|Algeria = [[Algeria]]
 |AMS|United States Virgin Islands = [[United States Virgin Islands]]
