*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -1,8 +1,7 @@
 {{#switch:{{{1|}}}
 |ABW|ARU|Aruba              = Flag of Aruba.svg
-|ADO = Flag of the United States Virgin Islands.svg
-|AFG|Afghanistan|Afganistan = Flag of Afghanistan.svg
-|ALB = Flag of Albania.svg
+|AFG|Afganistan|Afghanistan = Flag of Afghanistan.svg
+|ALB|Albania                = Flag of Albania.svg
 |ALŽ = Flag of Algeria.svg
 |AMS = Flag of the United States Virgin Islands.svg
 |AND = Flag of Andorra.svg
