*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -4,8 +4,7 @@
 |AFG|Afganistan|Afghanistan = Flag of Afghanistan.svg
 |ALB|Albania                = Flag of Albania.svg
 |DZA|ALG|Algeria            = Flag of Algeria.svg
-|AMS = Flag of the United States Virgin Islands.svg
-|AND = Flag of Andorra.svg
+|AND|Andorra                = Flag of Andorra.svg
 |ANG = Flag of Angola.svg
 |ANV = Flag of Anguilla.svg
 |ARG = Flag of Argentina.svg
