*Empty MediaWiki Message*

--- a/Template:AGO.mw
+++ b/Template:AGO.mw
@@ -1,4 +1,1 @@
-{{country|flagcountry|Angola}}<noinclude>
-{{Protected template}}
-[[Category:Flag templates|{{PAGENAME}}]]
-</noinclude>
+{{flagu|Angola}}
