*Empty MediaWiki Message*

--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -2,11 +2,11 @@
 <!-- ISO code | FIFA code | kampampangan name | English name -->
 |ABW|ARU|Aruba              = [[Aruba]]
 |AFG|Afganistan|Afghanistan = [[Afganistan]]
+|AGO|ANG|Angola             = [[Angola]]
 |ALB|Albania                = [[Albania]]
 |AND|Andorra                = [[Andorra]]
 |DZA|ALG|Algeria            = [[Algeria]]
 
-|ANG|Angola = [[Angola]]
 |ANV|Anguilla = [[Anguilla]]
 |ARG|Argentina = [[Argentina]]
 |ARM|Armenia = [[Armenia]]
