*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -2,10 +2,11 @@
 <!-- ISO code | FIFA code | kampampangan name | English name -->
 |ABW|ARU|Aruba              = Flag of Aruba.svg
 |AFG|Afganistan|Afghanistan = Flag of Afghanistan.svg
+|AGO|ANG|Angola             = Flag of Angola.svg
 |ALB|Albania                = Flag of Albania.svg
-|DZA|ALG|Algeria            = Flag of Algeria.svg
 |AND|Andorra                = Flag of Andorra.svg
-|ANG = Flag of Angola.svg
+|DZA|ALG|Algeria            = Flag of Algeria.svg
+
 |ANV = Flag of Anguilla.svg
 |ARG = Flag of Argentina.svg
 |ARM = Flag of Armenia.svg
