*Empty MediaWiki Message*

--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -3,11 +3,11 @@
 |ABW|ARU|Aruba              = [[Aruba]]
 |AFG|Afganistan|Afghanistan = [[Afganistan]]
 |AGO|ANG|Angola             = [[Angola]]
+|AIA|Anguilla               = [[Anguilla]]
 |ALB|Albania                = [[Albania]]
 |AND|Andorra                = [[Andorra]]
 |DZA|ALG|Algeria            = [[Algeria]]
 
-|ANV|Anguilla = [[Anguilla]]
 |ARG|Argentina = [[Argentina]]
 |ARM|Armenia = [[Armenia]]
 |ATG|Antigua and Barbuda = [[Antigua and Barbuda]]
