*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -3,11 +3,11 @@
 |ABW|ARU|Aruba              = Flag of Aruba.svg
 |AFG|Afganistan|Afghanistan = Flag of Afghanistan.svg
 |AGO|ANG|Angola             = Flag of Angola.svg
+|AIA|Anguilla               = Flag of Anguilla.svg
 |ALB|Albania                = Flag of Albania.svg
 |AND|Andorra                = Flag of Andorra.svg
 |DZA|ALG|Algeria            = Flag of Algeria.svg
 
-|ANV = Flag of Anguilla.svg
 |ARG = Flag of Argentina.svg
 |ARM = Flag of Armenia.svg
 |ATG = Flag of Antigua and Barbuda.svg
