--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -6,9 +6,9 @@
 |AIA|Anguilla               = Flag of Anguilla.svg
 |ALB|Albania                = Flag of Albania.svg
 |AND|Andorra                = Flag of Andorra.svg
+|ARG|Argentina              = Flag of Argentina.svg
 |DZA|ALG|Algeria            = Flag of Algeria.svg
 
-|ARG = Flag of Argentina.svg
 |ARM = Flag of Armenia.svg
 |ATG = Flag of Antigua and Barbuda.svg
 |AUS = Flag of Australia.svg
