*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -7,9 +7,9 @@
 |ALB|Albania                = Flag of Albania.svg
 |AND|Andorra                = Flag of Andorra.svg
 |ARG|Argentina              = Flag of Argentina.svg
+|ARM|Armenia                = Flag of Armenia.svg
 |DZA|ALG|Algeria            = Flag of Algeria.svg
 
-|ARM = Flag of Armenia.svg
 |ATG = Flag of Antigua and Barbuda.svg
 |AUS = Flag of Australia.svg
 |AUT = Flag of Austria.svg
