--- a/Template:ATG.mw
+++ b/Template:ATG.mw
@@ -1,3 +1,1 @@
-{{country|flagcountry|Antigua and Barbuda}}<noinclude>
-[[Category:Flag templates|{{PAGENAME}}]]
-</noinclude>
+{{flagu|Antigua and Barbuda}}}
