*Empty MediaWiki Message*

--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -8,9 +8,9 @@
 |AND|Andorra                = [[Andorra]]
 |ARG|Argentina              = [[Argentina]]
 |ARM|Armenia                = [[Armenia]]
+|ATG|Antigua at Barbuda|Antigua and Barbuda = [[Antigua at Barbuda]]
 |DZA|ALG|Algeria            = [[Algeria]]
 
-|ATG|Antigua and Barbuda = [[Antigua and Barbuda]]
 |AUS|Australia = [[Australia]]
 |AUT|Austria = [[Austria]]
 |AZE|Azerbaijan = [[Azerbaijan]]
