*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -8,9 +8,9 @@
 |AND|Andorra                = Flag of Andorra.svg
 |ARG|Argentina              = Flag of Argentina.svg
 |ARM|Armenia                = Flag of Armenia.svg
+|ATG|Antigua at Barbuda|Antigua and Barbuda = Flag of Antigua and Barbuda.svg
 |DZA|ALG|Algeria            = Flag of Algeria.svg
 
-|ATG = Flag of Antigua and Barbuda.svg
 |AUS = Flag of Australia.svg
 |AUT = Flag of Austria.svg
 |AZE = Flag of Azerbaijan.svg
