*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -9,9 +9,9 @@
 |ARG|Argentina              = Flag of Argentina.svg
 |ARM|Armenia                = Flag of Armenia.svg
 |ATG|Antigua at Barbuda|Antigua and Barbuda = Flag of Antigua and Barbuda.svg
+|AUS|Australia              = Flag of Australia.svg
 |DZA|ALG|Algeria            = Flag of Algeria.svg
 
-|AUS = Flag of Australia.svg
 |AUT = Flag of Austria.svg
 |AZE = Flag of Azerbaijan.svg
 |BAH = Flag of the Bahamas.svg
