--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -10,9 +10,9 @@
 |ARM|Armenia                = Flag of Armenia.svg
 |ATG|Antigua at Barbuda|Antigua and Barbuda = Flag of Antigua and Barbuda.svg
 |AUS|Australia              = Flag of Australia.svg
+|AUT|Austria                = Flag of Austria.svg
 |DZA|ALG|Algeria            = Flag of Algeria.svg
 
-|AUT = Flag of Austria.svg
 |AZE = Flag of Azerbaijan.svg
 |BAH = Flag of the Bahamas.svg
 |BAN = Flag of Bangladesh.svg
