*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -11,9 +11,9 @@
 |ATG|Antigua at Barbuda|Antigua and Barbuda = Flag of Antigua and Barbuda.svg
 |AUS|Australia              = Flag of Australia.svg
 |AUT|Austria                = Flag of Austria.svg
+|AZE|Azerbaijan             = Flag of Azerbaijan.svg
 |DZA|ALG|Algeria            = Flag of Algeria.svg
 
-|AZE = Flag of Azerbaijan.svg
 |BAH = Flag of the Bahamas.svg
 |BAN = Flag of Bangladesh.svg
 |BAR = Flag of Barbados.svg
