*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -14,218 +14,217 @@
 |AZE|Azerbaijan             = Flag of Azerbaijan.svg
 |DZA|ALG|Algeria            = Flag of Algeria.svg
 
-|BAH = Flag of the Bahamas.svg
-|BAN = Flag of Bangladesh.svg
-|BAR = Flag of Barbados.svg
-|BEL = Flag of Belgium.svg
-|BEN = Flag of Benin.svg
-|BER = Flag of Bermuda.svg
-|BIH = Flag of Bosnia and Herzegovina.svg
-|BHR = Flag of Bahrain.svg
-|BJE = Flag of Belarus.svg
-|BLZ = Flag of Belize.svg
-|BOC = Flag of Botswana.svg
-|BOL = Flag of Bolivia.svg
-|BRA = Flag of Brazil.svg
-|BRIT DJEV = Flag of the British Virgin Islands.svg
-|BRU = Flag of Brunei.svg
-|BUF = Flag of Burkina Faso.svg
-|BUG = Flag of Bulgaria.svg
-|BUR = Flag of Burundi.svg
-|BUT = Flag of Bhutan.svg
-|CG = Flag of Montenegro.svg
-|CIP = Flag of Cyprus.svg
-|CIV = Flag of Cote d'Ivoire.svg
-|ČAD = Flag of Chad.svg
-|ČEŠ = Flag of the Czech Republic.svg
-|ČIL = Flag of Chile.svg
-|ČSSR = Flag of the Czech Republic.svg
-|DAN = Flag of Denmark.svg
-|DDR = Flag of East Germany.svg
-|DMN = Flag of Dominica.svg
-|DOM = Flag of the Dominican Republic.svg
-|DR KONGO = Flag of the Democratic Republic of the Congo.svg
-|DRK = Flag of the Democratic Republic of the Congo.svg
-|DŽI = Flag of Djibouti.svg
-|EGI = Flag of Egypt.svg
-|EKG = Flag of Equatorial Guinea.svg
-|EKV = Flag of Ecuador.svg
-|ENG = Flag of England.svg
-|ERI = Flag of Eritrea.svg
-|EST = Flag of Estonia.svg
-|ETI = Flag of Ethiopia.svg
-|FAR = Flag of the Faroe Islands.svg
-|FIĐ = Flag of Fiji.svg
-|FIL = Flag of the Philippines.svg
-|FIN = Flag of Finland.svg
-|FRA = Flag of France.svg
-|FR GIJ = Flag of France.svg
-|GAB = Flag of Gabon.svg
-|GAM = Flag of The Gambia.svg
-|GAN = Flag of Ghana.svg
-|GIB = Flag of Gibraltar.svg
-|GRE = Flag of Grenada.svg
-|GRU = Flag of Georgia.svg
-|GRČ = Flag of Greece.svg
-|GUAM = Flag of Guam.svg
-|GUA = Flag of Guatemala.svg
-|GVA = Flag of Guyana.svg
-|GVAD = Flag of Guadeloupe.svg
-|GVB = Flag of Guinea-Bissau.svg
-|GVI = Flag of Guinea.svg
-|HAI = Flag of Haiti.svg
-|HK = Flag of Hong Kong.svg
-|HON = Flag of Honduras.svg
-|HRV = Flag of Croatia.svg
-|IND = Flag of India.svg
-|INDN = Flag of Indonesia.svg
-|IRK = Flag of Iraq.svg
-|IRN = Flag of Iran.svg
-|IRS = Flag of Ireland.svg
-|ISL = Flag of Iceland.svg
-|IST T = Flag of East Timor.svg
-|ITA = Flag of Italy.svg
-|IZR = Flag of Israel.svg
-|JAM = Flag of Jamaica.svg
-|JEM = Flag of Yemen.svg
-|JAP = Flag of Japan.svg
-|JAR = Flag of South Africa.svg
-|JKO = Flag of South Korea.svg
-|JOR = Flag of Jordan.svg
-|JUG = Flag of SFR Yugoslavia.svg
-|JUGK = Flag of the Kingdom of Yugoslavia.svg
-|KAJ = Flag of the Cayman Islands.svg
-|KAM = Flag of Cameroon.svg
-|KAN = Flag of Canada.svg
-|KAT = Flag of Qatar.svg
-|KATL = Flag of Catalonia.svg
-|KAZ = Flag of Kazakhstan.svg
-|KEN = Flag of Kenya.svg
-|KIN = Flag of the People's Republic of China.svg
-|KIR = Flag of Kyrgyzstan.svg
-|KMB = Flag of Cambodia.svg
-|KOL = Flag of Colombia.svg
-|KOM = Flag of the Comoros.svg
-|KOS = Flag of Costa Rica.svg
-|KSV = Flag of Kosovo.svg
-|KUB = Flag of Cuba.svg
-|KUK = Flag of the Cook Islands.svg
-|KUV = Flag of Kuwait.svg
-|LAO = Flag of Laos.svg
-|LAT = Flag of Latvia.svg
-|LBN = Flag of Lebanon.svg
-|LBR = Flag of Liberia.svg
-|LES = Flag of Lesotho.svg
-|LIB = Flag of Libya.svg
-|LIH = Flag of Liechtenstein.svg
-|LIT = Flag of Lithuania.svg
-|LUX = Flag of Luxembourg.svg
-|MAD = Flag of Madagascar.svg
-|MAK = Flag of Macedonia.svg
-|MLT = Flag of Malta.svg
-|MLV = Flag of Malawi.svg
-|MAĐ = Flag of Hungary.svg
-|MALD = Flag of Maldives.svg
-|MALE = Flag of Malaysia.svg
-|MALI = Flag of Mali.svg
-|MARŠ = Flag of the Marshall Islands.svg
-|MART = Flag of Martinique.svg  
-|MAR = Flag of Morocco.svg
-|MAO = Flag of Macau.svg
-|MAU = Flag of Mauritania.svg
-|MAUS = Flag of Mauritius.svg
-|MEX = Flag of Mexico.svg
-|MIA = Flag of Myanmar.svg
-|MNG = Flag of Mongolia.svg
-|MOL = Flag of Moldova.svg
-|MONT = Flag of Montserrat.svg
-|MOZ = Flag of Mozambique.svg
-|NAM = Flag of Namibia.svg
-|NDH = Flag of Independent State of Croatia.svg
-|NEP = Flag of Nepal.svg
-|NGR = Flag of Niger.svg
-|NIG = Flag of Nigeria.svg
-|NIK = Flag of Nicaragua.svg
-|NIZ = Flag of the Netherlands.svg
-|NIZ ANT = Flag of the Netherlands Antilles.svg
-|NJE = Flag of Germany.svg
-|NOR = Flag of Norway.svg
-|NZL = Flag of New Zealand.svg
-|OMA = Flag of Oman.svg
-|OTC = Flag of the Turks and Caicos Islands.svg
-|OVČ = Flag of the Faroe Islands.svg
-|PAK = Flag of Pakistan.svg
-|PAL = Flag of Palestine.svg
-|PAN = Flag of Panama.svg
-|PAR = Flag of Paraguay.svg
-|PER = Flag of Peru.svg
-|PNG = Flag of Papua New Guinea.svg
-|POLJ = Flag of Poland.svg
-|POR = Flag of Portugal.svg
-|PUE = Flag of Puerto Rico.svg
-|RKO = Flag of the Republic of the Congo.svg
-|RUA = Flag of Rwanda.svg
-|RUM = Flag of Romania.svg
+|BAH|Bahamas = Flag of the Bahamas.svg
+|BAN|Bangladesh = Flag of Bangladesh.svg
+|BAR|Barbados = Flag of Barbados.svg
+|BEL|Belgium = Flag of Belgium.svg
+|BEN|Benin = Flag of Benin.svg
+|BER|Bermuda = Flag of Bermuda.svg
+|BIH|Bosnia and Herzegovina = Flag of Bosnia and Herzegovina.svg
+|BHR|Bahrain = Flag of Bahrain.svg
+|BJE|Belarus = Flag of Belarus.svg
+|BLZ|Belize = Flag of Belize.svg
+|BOC|Botswana = Flag of Botswana.svg
+|BOL|Bolivia = Flag of Bolivia.svg
+|BRA|Brazil = Flag of Brazil.svg
+|BRIT DJEV|British Virgin Islands = Flag of the British Virgin Islands.svg
+|BRU|Brunei = Flag of Brunei.svg
+|BUF|Burkina Faso = Flag of Burkina Faso.svg
+|BUG|Bulgaria = Flag of Bulgaria.svg
+|BUR|Burundi = Flag of Burundi.svg
+|BUT|Bhutan = Flag of Bhutan.svg
+|CG|Montenegro = Flag of Montenegro.svg
+|CIP|Cyprus = Flag of Cyprus.svg
+|CIV|Cote d'Ivoire = Flag of Cote d'Ivoire.svg
+|ČAD|Chad = Flag of Chad.svg
+|ČEŠ|Czech Republic = Flag of the Czech Republic.svg
+|ČIL|Chile = Flag of Chile.svg
+|ČSSR|Czech Republic = Flag of the Czech Republic.svg
+|DAN|Denmark = Flag of Denmark.svg
+|DDR|East Germany = Flag of East Germany.svg
+|DMN|Dominica = Flag of Dominica.svg
+|DOM|Dominican Republic = Flag of the Dominican Republic.svg
+|DR KONGO|Democratic Republic of the Congo = Flag of the Democratic Republic of the Congo.svg
+|DRK|Democratic Republic of the Congo = Flag of the Democratic Republic of the Congo.svg
+|DŽI|Djibouti = Flag of Djibouti.svg
+|EGI|Egypt = Flag of Egypt.svg
+|EKG|Equatorial Guinea = Flag of Equatorial Guinea.svg
+|EKV|Ecuador = Flag of Ecuador.svg
+|ENG|England = Flag of England.svg
+|ERI|Eritrea = Flag of Eritrea.svg
+|EST|Estonia = Flag of Estonia.svg
+|ETI|Ethiopia = Flag of Ethiopia.svg
+|FAR|Faroe Islands = Flag of the Faroe Islands.svg
+|FIĐ|Fiji = Flag of Fiji.svg
+|FIL|Philippines = Flag of the Philippines.svg
+|FIN|Finland = Flag of Finland.svg
+|FRA|France = Flag of France.svg
+|FR GIJ|France = Flag of France.svg
+|GAB|Gabon = Flag of Gabon.svg
+|GAM|The Gambia = Flag of The Gambia.svg
+|GAN|Ghana = Flag of Ghana.svg
+|GIB|Gibraltar = Flag of Gibraltar.svg
+|GRE|Grenada = Flag of Grenada.svg
+|GRU|Georgia = Flag of Georgia.svg
+|GRČ|Greece = Flag of Greece.svg
+|GUAM|Guam = Flag of Guam.svg
+|GUA|Guatemala = Flag of Guatemala.svg
+|GVA|Guyana = Flag of Guyana.svg
+|GVAD|Guadeloupe = Flag of Guadeloupe.svg
+|GVB|Guinea-Bissau = Flag of Guinea-Bissau.svg
+|GVI|Guinea = Flag of Guinea.svg
+|HAI|Haiti = Flag of Haiti.svg
+|HK|Hong Kong = Flag of Hong Kong.svg
+|HON|Honduras = Flag of Honduras.svg
+|HRV|Croatia = Flag of Croatia.svg
+|IND|India = Flag of India.svg
+|INDN|Indonesia = Flag of Indonesia.svg
+|IRK|Iraq = Flag of Iraq.svg
+|IRN|Iran = Flag of Iran.svg
+|IRS|Ireland = Flag of Ireland.svg
+|ISL|Iceland = Flag of Iceland.svg
+|IST T|East Timor = Flag of East Timor.svg
+|ITA|Italy = Flag of Italy.svg
+|IZR|Israel = Flag of Israel.svg
+|JAM|Jamaica = Flag of Jamaica.svg
+|JEM|Yemen = Flag of Yemen.svg
+|JAP|Japan = Flag of Japan.svg
+|JAR|South Africa = Flag of South Africa.svg
+|JKO|South Korea = Flag of South Korea.svg
+|JOR|Jordan = Flag of Jordan.svg
+|JUG|SFR Yugoslavia = Flag of SFR Yugoslavia.svg
+|JUGK|Kingdom of Yugoslavia = Flag of the Kingdom of Yugoslavia.svg
+|KAJ|Cayman Islands = Flag of the Cayman Islands.svg
+|KAM|Cameroon = Flag of Cameroon.svg
+|KAN|Canada = Flag of Canada.svg
+|KAT|Qatar = Flag of Qatar.svg
+|KATL|Catalonia = Flag of Catalonia.svg
+|KAZ|Kazakhstan = Flag of Kazakhstan.svg
+|KEN|Kenya = Flag of Kenya.svg
+|KIN|People's Republic of China = Flag of the People's Republic of China.svg
+|KIR|Kyrgyzstan = Flag of Kyrgyzstan.svg
+|KMB|Cambodia = Flag of Cambodia.svg
+|KOL|Colombia = Flag of Colombia.svg
+|KOM|Comoros = Flag of the Comoros.svg
+|KOS|Costa Rica = Flag of Costa Rica.svg
+|KSV|Kosovo = Flag of Kosovo.svg
+|KUB|Cuba = Flag of Cuba.svg
+|KUK|Cook Islands = Flag of the Cook Islands.svg
+|KUV|Kuwait = Flag of Kuwait.svg
+|LAO|Laos = Flag of Laos.svg
+|LAT|Latvia = Flag of Latvia.svg
+|LBN|Lebanon = Flag of Lebanon.svg
+|LBR|Liberia = Flag of Liberia.svg
+|LES|Lesotho = Flag of Lesotho.svg
+|LIB|Libya = Flag of Libya.svg
+|LIH|Liechtenstein = Flag of Liechtenstein.svg
+|LIT|Lithuania = Flag of Lithuania.svg
+|LUX|Luxembourg = Flag of Luxembourg.svg
+|MAD|Madagascar = Flag of Madagascar.svg
+|MAK|Macedonia = Flag of Macedonia.svg
+|MLT|Malta = Flag of Malta.svg
+|MLV|Malawi = Flag of Malawi.svg
+|MAĐ|Hungary = Flag of Hungary.svg
+|MALD|Maldives = Flag of Maldives.svg
+|MALE|Malaysia = Flag of Malaysia.svg
+|MALI|Mali = Flag of Mali.svg
+|MARŠ|Marshall Islands = Flag of the Marshall Islands.svg
+|MART|Martinique = Flag of Martinique.svg  
+|MAR|Morocco = Flag of Morocco.svg
+|MAO|Macau = Flag of Macau.svg
+|MAU|Mauritania = Flag of Mauritania.svg
+|MAUS|Mauritius = Flag of Mauritius.svg
+|MEX|Mexico = Flag of Mexico.svg
+|MIA|Myanmar = Flag of Myanmar.svg
+|MNG|Mongolia = Flag of Mongolia.svg
+|MOL|Moldova = Flag of Moldova.svg
+|MONT|Montserrat = Flag of Montserrat.svg
+|MOZ|Mozambique = Flag of Mozambique.svg
+|NAM|Namibia = Flag of Namibia.svg
+|NDH|Independent State of Croatia = Flag of Independent State of Croatia.svg
+|NEP|Nepal = Flag of Nepal.svg
+|NGR|Niger = Flag of Niger.svg
+|NIG|Nigeria = Flag of Nigeria.svg
+|NIK|Nicaragua = Flag of Nicaragua.svg
+|NIZ|Netherlands = Flag of the Netherlands.svg
+|NIZ ANT|Netherlands Antilles = Flag of the Netherlands Antilles.svg
+|NJE|Germany = Flag of Germany.svg
+|NOR|Norway = Flag of Norway.svg
+|NZL|New Zealand = Flag of New Zealand.svg
+|OMA|Oman = Flag of Oman.svg
+|OTC|Turks and Caicos Islands = Flag of the Turks and Caicos Islands.svg
+|OVČ|Faroe Islands = Flag of the Faroe Islands.svg
+|PAK|Pakistan = Flag of Pakistan.svg
+|PAL|Palestine = Flag of Palestine.svg
+|PAN|Panama = Flag of Panama.svg
+|PAR|Paraguay = Flag of Paraguay.svg
+|PER|Peru = Flag of Peru.svg
+|PNG|Papua New Guinea = Flag of Papua New Guinea.svg
+|POLJ|Poland = Flag of Poland.svg
+|POR|Portugal = Flag of Portugal.svg
+|PUE|Puerto Rico = Flag of Puerto Rico.svg
+|RKO|Republic of the Congo = Flag of the Republic of the Congo.svg
+|RUA|Rwanda = Flag of Rwanda.svg
+|RUM|Romania = Flag of Romania.svg
 |RUS = Flag_of_Russia.svg
-|SAD = Flag of the United States.svg
-|SAL = Flag of El Salvador.svg
-|SAM = Flag of Samoa.svg
-|SAU = Flag of Saudi Arabia.svg
-|SEJ = Flag of the Seychelles.svg
-|SEN = Flag of Senegal.svg
-|S LEO = Flag of Sierra Leone.svg
-|SIN = Flag of Singapore.svg
-|SIR = Flag of Syria.svg
-|SCG = Flag of Serbia and Montenegro.svg
-|SJI = Flag of Northern Ireland.svg
-|SJKOR = Flag of North Korea.svg
-|SLK = Flag of Slovakia.svg
-|SLO = Flag of Slovenia.svg
-|SMR = Flag of San Marino.svg
-|SOL = Flag of the Solomon Islands.svg
-|SOM = Flag of Somalia.svg
-|SRB = Flag of Serbia.svg
+|SAD|United States = Flag of the United States.svg
+|SAL|El Salvador = Flag of El Salvador.svg
+|SAM|Samoa = Flag of Samoa.svg
+|SAU|Saudi Arabia = Flag of Saudi Arabia.svg
+|SEJ|Seychelles = Flag of the Seychelles.svg
+|SEN|Senegal = Flag of Senegal.svg
+|S LEO|Sierra Leone = Flag of Sierra Leone.svg
+|SIN|Singapore = Flag of Singapore.svg
+|SIR|Syria = Flag of Syria.svg
+|SCG|Serbia and Montenegro = Flag of Serbia and Montenegro.svg
+|SJI|Northern Ireland = Flag of Northern Ireland.svg
+|SJKOR|North Korea = Flag of North Korea.svg
+|SLK|Slovakia = Flag of Slovakia.svg
+|SLO|Slovenia = Flag of Slovenia.svg
+|SMR|San Marino = Flag of San Marino.svg
+|SOL|Solomon Islands = Flag of the Solomon Islands.svg
+|SOM|Somalia = Flag of Somalia.svg
+|SRB|Serbia = Flag of Serbia.svg
 |SRH = Flag_of_SR_Croatia.svg
-|SSSR = Flag of the Soviet Union.svg
-|SAR = Flag of the Central African Republic.svg
-|SVA = Flag of Swaziland.svg
-|SV LUC = Flag of Saint Lucia.svg
-|SV KIN = Flag of Saint Kitts and Nevis.svg
-|SV TIP = Flag of Sao Tome and Principe.svg
-|SV VIG = Flag of Saint Vincent and the Grenadines.svg
-|SUD = Flag of Sudan.svg
-|SUR = Flag of Suriname.svg
-|ŠKO = Flag of Scotland.svg
-|ŠPA = Flag of Spain.svg
-|ŠVE = Flag of Sweden.svg
-|ŠRI = Flag of Sri Lanka.svg
-|ŠVI = Flag of Switzerland.svg
-|TADŽ = Flag of Tajikistan.svg
-|FR POLI = Flag of French Polynesia.svg
-|TAH = Flag of French Polynesia.svg
-|TAJ = Flag of Thailand.svg
-|TAJV = Flag of the Republic of China.svg
-|TAN = Flag of Tanzania.svg
-|TOG = Flag of Togo.svg
-|TON = Flag of Tonga.svg
-|TRI = Flag of Trinidad and Tobago.svg
-|TUN = Flag of Tunisia.svg
-|TKM = Flag of Turkmenistan.svg
-|TUR = Flag of Turkey.svg
-|TUV = Flag of Tuvalu.svg
-|UAE = Flag of the United Arab Emirates.svg
-|UGA = Flag of Uganda.svg
-|UKR = Flag of Ukraine.svg
-|URU = Flag of Uruguay.svg
-|UZB = Flag of Uzbekistan.svg
-|VAN = Flag of Vanuatu.svg
-|VEN = Flag of Venezuela.svg
-|VIJ = Flag of Vietnam.svg
-|WAL = Flag of Wales 2.svg
-|WIF = Flag of Wallis and Futuna.svg
-|ZAM = Flag of Zambia.svg
-|ZEL = Flag of Cape Verde.svg
-|ZIM = Flag of Zimbabwe.svg
-|#default = Flag of None.svg
-}}<noinclude>
-</noinclude>
+|SSSR|Soviet Union = Flag of the Soviet Union.svg
+|SAR|Central African Republic = Flag of the Central African Republic.svg
+|SVA|Swaziland = Flag of Swaziland.svg
+|SV LUC|Saint Lucia = Flag of Saint Lucia.svg
+|SV KIN|Saint Kitts and Nevis = Flag of Saint Kitts and Nevis.svg
+|SV TIP|Sao Tome and Principe = Flag of Sao Tome and Principe.svg
+|SV VIG|Saint Vincent and the Grenadines = Flag of Saint Vincent and the Grenadines.svg
+|SUD|Sudan = Flag of Sudan.svg
+|SUR|Suriname = Flag of Suriname.svg
+|ŠKO|Scotland = Flag of Scotland.svg
+|ŠPA|Spain = Flag of Spain.svg
+|ŠVE|Sweden = Flag of Sweden.svg
+|ŠRI|Sri Lanka = Flag of Sri Lanka.svg
+|ŠVI|Switzerland = Flag of Switzerland.svg
+|TADŽ|Tajikistan = Flag of Tajikistan.svg
+|FR POLI|French Polynesia = Flag of French Polynesia.svg
+|TAH|French Polynesia = Flag of French Polynesia.svg
+|TAJ|Thailand = Flag of Thailand.svg
+|TAJV|Republic of China = Flag of the Republic of China.svg
+|TAN|Tanzania = Flag of Tanzania.svg
+|TOG|Togo = Flag of Togo.svg
+|TON|Tonga = Flag of Tonga.svg
+|TRI|Trinidad and Tobago = Flag of Trinidad and Tobago.svg
+|TUN|Tunisia = Flag of Tunisia.svg
+|TKM|Turkmenistan = Flag of Turkmenistan.svg
+|TUR|Turkey = Flag of Turkey.svg
+|TUV|Tuvalu = Flag of Tuvalu.svg
+|UAE|United Arab Emirates = Flag of the United Arab Emirates.svg
+|UGA|Uganda = Flag of Uganda.svg
+|UKR|Ukraine = Flag of Ukraine.svg
+|URU|Uruguay = Flag of Uruguay.svg
+|UZB|Uzbekistan = Flag of Uzbekistan.svg
+|VAN|Vanuatu = Flag of Vanuatu.svg
+|VEN|Venezuela = Flag of Venezuela.svg
+|VIJ|Vietnam = Flag of Vietnam.svg
+|WAL|Wales 2 = Flag of Wales 2.svg
+|WIF|Wallis and Futuna = Flag of Wallis and Futuna.svg
+|ZAM|Zambia = Flag of Zambia.svg
+|ZEL|Cape Verde = Flag of Cape Verde.svg
+|ZIM|Zimbabwe = Flag of Zimbabwe.svg
+|#default|None = Flag of None.svg
+}}
