*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -221,7 +221,7 @@
 |VAN|Vanuatu = Flag of Vanuatu.svg
 |VEN|Venezuela = Flag of Venezuela.svg
 |VIJ|Vietnam = Flag of Vietnam.svg
-|WAL|Wales 2 = Flag of Wales 2.svg
+|WAL|Wales = Flag of Wales.svg
 |WIF|Wallis and Futuna = Flag of Wallis and Futuna.svg
 |ZAM|Zambia = Flag of Zambia.svg
 |ZEL|Cape Verde = Flag of Cape Verde.svg
