*Empty MediaWiki Message*

--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -4,6 +4,7 @@
 |AFG|Afganistan|Afghanistan = [[Afganistan]]
 |AGO|ANG|Angola             = [[Angola]]
 |AIA|Anguilla               = [[Anguilla]]
+|ALA|Åland Islands          = [[Åland Islands]]
 |ALB|Albania                = [[Albania]]
 |AND|Andorra                = [[Andorra]]
 |ARG|Argentina              = [[Argentina]]
