--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -4,6 +4,7 @@
 |AFG|Afganistan|Afghanistan = Flag of Afghanistan.svg
 |AGO|ANG|Angola             = Flag of Angola.svg
 |AIA|Anguilla               = Flag of Anguilla.svg
+|ALA|Åland Islands          = Flag of Åland.svg
 |ALB|Albania                = Flag of Albania.svg
 |AND|Andorra                = Flag of Andorra.svg
 |ARG|Argentina              = Flag of Argentina.svg
