*Empty MediaWiki Message*

--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -7,6 +7,7 @@
 |ALA|Åland Islands          = [[Åland Islands]]
 |ALB|Albania                = [[Albania]]
 |AND|Andorra                = [[Andorra]]
+|ANT|AHO|Netherlands Antilles = [[Netherlands Antilles]]
 |ARG|Argentina              = [[Argentina]]
 |ARM|Armenia                = [[Armenia]]
 |ATG|Antigua at Barbuda|Antigua and Barbuda = [[Antigua at Barbuda]]
@@ -148,7 +149,6 @@
 |NIG|Nigeria = [[Nigeria]]
 |NIK|Nicaragua = [[Nicaragua]]
 |NIZ|Netherlands = [[Netherlands]]
-|NIZ ANT|Netherlands Antilles = [[Netherlands Antilles]]
 |NJE|Germany = [[Germany]]
 |NOR|Norway = [[Norway]]
 |NZL|New Zealand = [[New Zealand]]
