*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -7,6 +7,7 @@
 |ALA|Åland Islands          = Flag of Åland.svg
 |ALB|Albania                = Flag of Albania.svg
 |AND|Andorra                = Flag of Andorra.svg
+|ANT|AHO|Netherlands Antilles = Flag of the Netherlands Antilles.svg
 |ARG|Argentina              = Flag of Argentina.svg
 |ARM|Armenia                = Flag of Armenia.svg
 |ATG|Antigua at Barbuda|Antigua and Barbuda = Flag of Antigua and Barbuda.svg
@@ -148,7 +149,6 @@
 |NIG|Nigeria = Flag of Nigeria.svg
 |NIK|Nicaragua = Flag of Nicaragua.svg
 |NIZ|Netherlands = Flag of the Netherlands.svg
-|NIZ ANT|Netherlands Antilles = Flag of the Netherlands Antilles.svg
 |NJE|Germany = Flag of Germany.svg
 |NOR|Norway = Flag of Norway.svg
 |NZL|New Zealand = Flag of New Zealand.svg
