*Empty MediaWiki Message*

--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -10,6 +10,7 @@
 |ANT|AHO|Netherlands Antilles = [[Netherlands Antilles]]
 |ARG|Argentina              = [[Argentina]]
 |ARM|Armenia                = [[Armenia]]
+|ASM|ASA|Amerika Samoa|American Samoa = [[Amerika Samoa]]
 |ATG|Antigua at Barbuda|Antigua and Barbuda = [[Antigua at Barbuda]]
 |AUS|Australia              = [[Australia]]
 |AUT|Austria                = [[Austria]]
